--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
 <head>
   <title>Page Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- remove styles link for Bootstrap 3.3.7 and uncomment below if you want to use Bootstrap 4.0.0 -->
-  <!--   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="css/styles.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="js/scripts.js"></script>
 </head>
 <body>
+  <div class="container">
+    <h1>English to Pig Latin Converter</h1>
+    <h4>Enter a phrase below and click submit to translate the phrase into pig latin.</h4>
+    <form id="pig-latin">
+      <label for="input">Phrase</label>
+      <input type="text" class="form-control" id="input">
+      <button type="submit" class="btn btn-default btn-lg" id="submit">Translate</button>
+      <button type="reset" class="btn btn-default btn-lg" id="submit">Reset</button>
+    </form>
+  </div>
 </body>
 </html>
