--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       <button type="submit" class="btn btn-default btn-lg" id="submit">Translate</button>
       <button type="reset" class="btn btn-default btn-lg" id="submit">Reset</button>
     </form>
+    <div id="results-box">
+      <div id="results"></div>
+      <button type="button" class="btn btn-default btn-lg" id="try-again">Try Again</button>
+    </div>
   </div>
 </body>
 </html>
