refactored to remove a loop, added more special characters, refactored conditionals, added case for squ

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
   <div class="container">
     <h1>English to Pig Latin Converter</h1>
-    <h4>Enter a phrase below and click submit to translate the phrase into pig latin.</h4>
+    <img src="img/pig-latin.jpg" alt="Pig Latin image">
+    <h3>Enter a phrase below and click submit to translate the phrase into pig latin.</h3>
     <form id="pig-latin">
-      <label for="input">Phrase</label>
       <input type="text" class="form-control" id="input">
       <button type="submit" class="btn btn-default btn-lg" id="submit">Translate</button>
       <button type="reset" class="btn btn-default btn-lg" id="submit">Reset</button>
